@@ -1,3 +1,8 @@
+2005-02-16  Moritz Schulte  <moritz@g10code.com>
+
+	* mpiutil.c (_gcry_mpi_alloc_limb_space): Rewritten, fixed memory
+	corruption.
+
 2005-01-05  Werner Koch  <wk@g10code.com>
 
 	* hppa1.1/udiv-qrnnd.S: Reverted change of 2004-03-02 but kept the
